# wasmato

./: .gdbinit  .gitignore  .gitmodules  Makefile  README.md  meson.build
apps/: Makefile  meson.build
apps/acpid/: Makefile  error.h  interface_impl.c  main.c  os.h
apps/include/: trace.h
apps/init/: Makefile  main.c  meson.build
apps/libs/: Makefile
artifacts/: limine.conf
cross/: x86_64-none-elf.ini
kernel/: Makefile  limine_requests.c  limine_requests.h  linker.ld  main.c
kernel/acpi/: acpi.c
kernel/arch/: apic.c  apic.h  cpuid.h  gdt.c  gdt.h  intr.c  intr.h  paging.h
kernel/debug/: log.c  log.h  ubsan.c
kernel/lib/: defs.h  except.c  except.h  list.h  printf.c  string.c
kernel/mem/: alloc.c  alloc.h  alloc_internal.h  early.c  mapping.h  mappings.c  mappings.h  memory.h  phys.c  phys.h  phys_map.c  phys_map.h  stack.c  stack.h  valloc.c  virt.c  virt.h  vmar.c  vmar.h  vmars.c  vmars.h  vmo.c  vmo.h
kernel/mem/internal/: direct.h  early.c  early.h  phys.c  phys_map.c  virt.c  virt.h
kernel/mem/kernel/: alloc.c  alloc.h  stack.c  stack.h  valloc.c  valloc.h
kernel/object/: object.c  object.h
kernel/thread/: pcpu.c  scheduler.c  scheduler.h  thread.S  thread.c  thread.h
kernel/time/: tsc.c  tsc.h
makefiles/: limine.mk  test.mk  wasm.mk
scripts/: build.mk  check-ibt-whitelist.py  defs.mk
src/common/: meson.build
src/common/arch/: cpuid.h  intrin.h
src/common/debug/: ubsan.c
src/common/lib/: assert.h  atomic.h  defs.h  elf64.h  list.h  log.h  printf.h  siphash.c  siphash.h  string.c  string_base.c  tsc.h
src/common/lib/rbtree/: rbtree.h
src/common/sync/: spinlock.h
src/common/uapi/: entry.h  irq.h  mapping.h  page.h  syscall.h  wait.h
src/kernel/: Makefile  limine_requests.c  limine_requests.h  linker.ld  main.c  meson.build  runtime.c  runtime.h
src/kernel/acpi/: acpi.c  acpi.h  acpi_tables.h
src/kernel/arch/: apic.c  apic.h  cpuid.h  gdt.c  gdt.h  intr.S  intr.c  intr.h  intrin.h  paging.h  smp.c
src/kernel/debug/: log.c
src/kernel/irq/: ioapic.c  ioapic.h  irq.c  irq.h
src/kernel/lib/: except.c  except.h  ipi.c  ipi.h  pcpu.c  pcpu.h  printf.c  printf.h  random.c  random.h  sp.c  sp.h  string.h
src/kernel/mem/: alloc.c  alloc.h  direct.h  early.c  early.h  mappings.c  mappings.h  phys.c  phys.h  phys_map.c  phys_map.h  region.c  region.h  stack.c  stack.h  virt.c  virt.h  vmar.c  vmar.h
src/kernel/mem/internal/: early.c  phys.h  phys_map.c  virt.c  virt.h
src/kernel/mem/kernel/: alloc.c
src/kernel/sync/: irq.h
src/kernel/thread/: pcpu.c  sched.c  sched.h  scheduler.c  scheduler.h  syscall.c  syscall.h  thread.S  thread.c  thread.h  wait.c  wait.h
src/kernel/time/: timer.c  timer.h  tsc.c  tsc.h
src/kernel/user/: handle.c  handle.h  object.c  object.h  runtime.c  runtime.h  stack.c  stack.h  syscall.S  syscall.c  syscall.h  user.S  user.h
src/runtime/: Makefile  main.c  meson.build  runtime.c  runtime.h  wasi.c  wasi.h  wasm.c  wasm.h  wasm_err.h
src/runtime/alloc/: aligned_alloc.c  alloc.h  malloc.c  malloc_impl.h  rust.c
src/runtime/core/: entry.c  main.c  sched.c  sched.h  thread.S  thread.c  thread.h  timer.c  timer.h  wait.c  wait.h
src/runtime/debug/: gdb_jit.c  gdb_jit.h  log.c
src/runtime/lib/: except.c  except.h  stb_ds.c  stb_ds.h  stb_sprintf.c  stb_sprintf.h  string.c  syscall.c  syscall.h  unaligned.h
src/runtime/proc/: handle.c  handle.h  object.c  object.h  proc.c  proc.h  thread.c  thread.h  threads.c  threads.h  wasm_err.h
src/runtime/sync/: channel.c  channel.h  mutex.c  mutex.h
src/runtime/wasi/: file.c  file.h  wasi.c  wasi.h  wasip1.h
src/runtime/wasm/: buffer.c  buffer.h  errno.h  file.c  file.h  module.c  module.h  proc.c  proc.h  runtime.c  spec.h  wasi.c  wasi.h  wasm.c  wasm.h  wasmato.c  wasmato.h
src/runtime/wasm/jit/: function.c  function.h  inst.c  inst.h  jit.c  jit.h  jit_internal.h  opcodes.c  opcodes.h
src/runtime/wasmato/: wasmato.c  wasmato.h
src/rust-libs/: Cargo.toml  Makefile  meson.build
src/rust-libs/src/: lib.rs  platform.rs
